# Jarvis

./: .env.example  .gitignore  README.md  agent.py  config.py  main.py  pyproject.toml  requirements.txt  setup.sh
.cursor/plans/: agent_framework_refactoring_030f72c3.plan.md  jarvis-commercial-architecture-upgrade_dbdfb460.plan.md  jarvis-commercial-refactor_f904657f.plan.md
.github/workflows/: ci.yml
agent/: simple.py
agent_learning/: .env.example  README.md  pyproject.toml
agent_learning/src/core/: __init__.py  agent.py  config.py  llm_client.py  memory.py  tools.py  trace.py  types.py
agent_learning/src/examples/: __init__.py  chat_agent.py  planner_agent.py  tool_agent.py
agent_learning/tests/: test_agent_loop.py  test_tools.py
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW_AND_GUIDANCE.zh-CN.md  DESIGN_AGENT.md  DESIGN_AGENT_PLATFORM.md  DESIGN_LLMGATEWAY.md  DESIGN_MEMORY.md  DESIGN_MULTI_AGENT.md  DESIGN_TOOLS.md  OBSERVABILITY.md  OVERVIEW.md  PROJECT_IMPLEMENTATION_GUIDE.zh-CN.md  TEACHING_PLAN.md  test.md
engine/: base.py
src/: config.py  main.py
src/agent/: __init__.py  agent_executor.py  app.py  base_agent.py  coordinator.py  factory.py  memory.py  orchestrator.py  planner.py  response.py  session.py  simple.py  tool_set.py
src/application/: __init__.py  app.py
src/common/: __init__.py  errors.py
src/domain/: __init__.py
src/engine/: __init__.py  base.py  types.py
src/infrastructure/: __init__.py  config.py
tests/: test_agent_e2e.py  test_architecture_layering.py  test_config.py  test_memory.py  test_reliability_observability.py
(+77 files in other folders)
